# xr-voice-sdk

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  PRODUCT.md  build_dependencies.sh  cov_build.sh
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: native_full_build.yml
ci/: build_dependencies.sh  cov_build.sh
ci/mocks/: rdkversion.h  safec_lib.h
docs/: API_Cross_Reference_Validation_Report.md  API_Interface_Documentation.md  API_Validation_Testing_Analysis.md  Build_System_Configuration.md  Component_Dependencies.md  Component_Initialization_Startup_Documentation.md  Configuration_Inheritance_Override_Mechanisms.md  Configuration_Schema_Documentation.md  Cross_Component_Integration_Analysis.md  Cross_Reference_Navigation_System.md  Documentation_Finalization_Integration_Package.md  Documentation_Maintenance_Guidelines.md  Error_Handling_Patterns_Return_Code_Conventions.md  Known_Limitations_Investigation_Areas.md  Performance_Analysis_Framework.md  Plugin_Architecture.md  Quick_Start_Developer_Guide.md  README.md  Runtime_Configuration_Update_Capabilities.md  SDK_Architecture.md  Security_Analysis.md  Threading_Model.md  Validation_Quality_Assurance_Completion_Summary.md  Versioning_System.md  XRAudio_Atomic_Operations_Threading.md  XRAudio_Codec_Analysis.md  XRAudio_Component_Analysis.md  XRAudio_Configuration_Management.md  XRAudio_Input_Subsystem.md  XRAudio_Real_Time_Processing.md  XRAudio_Threading_Model_Synchronization.md  XRAudio_Utility_Functions_Helpers.md  XRSR_Advanced_Features_Analysis.md  XRSR_Architecture_Protocol_Analysis.md  XRSR_Error_Handling_Recovery.md  XRSR_HTTP_Protocol_Implementation.md  XRSR_Message_Queue_System.md  XRSR_Power_Mode_Integration.md  XRSR_SDT_Protocol_Analysis.md  XRSR_Session_Lifecycle_Management.md  (+13 more)
openspec/changes/archive/2026-03-04-analyze-and-document-xr-voice-sdk/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-04-analyze-and-document-xr-voice-sdk/specs/api-interfaces/: spec.md
openspec/changes/archive/2026-03-04-analyze-and-document-xr-voice-sdk/specs/logging-framework/: spec.md
openspec/changes/archive/2026-03-04-analyze-and-document-xr-voice-sdk/specs/message-queuing/: spec.md
openspec/changes/archive/2026-03-04-analyze-and-document-xr-voice-sdk/specs/speech-routing/: spec.md
openspec/changes/archive/2026-03-04-analyze-and-document-xr-voice-sdk/specs/state-management/: spec.md
openspec/changes/archive/2026-03-04-analyze-and-document-xr-voice-sdk/specs/voice-recognition/: spec.md
openspec/specs/: CPP_Compatibility_Mixed_Language_Support.md
openspec/specs/audio-processing/: spec.md
openspec/specs/build-configuration/: spec.md
openspec/specs/sdk-architecture/: spec.md
openspec/specs/utility-services/: spec.md
scripts/: rdkx_logger_modules_to_c.py  rdkx_logger_to_vendor.py  vsdk_json_combine.py  vsdk_json_to_header.py
src/: CMakeLists.txt  vsdk.c  vsdk_private.h  xr_voice_sdk.h
src/xr-audio/: xraudio.c  xraudio.h  xraudio_common.h  xraudio_config_default.json  xraudio_dga.h  xraudio_eos.h  xraudio_hal.h  xraudio_input.c  xraudio_input.h  xraudio_kwd.h  xraudio_mfv.h  xraudio_output.c  xraudio_output.h  xraudio_ovc.h  xraudio_ppr.h  xraudio_private.h  xraudio_resource.c  xraudio_sdf.h  xraudio_thread.c  xraudio_utils.c  xraudio_vad.cpp  xraudio_vad.h  xraudio_vad_stub.c  xraudio_version.h
src/xr-audio/adpcm/: adpcm.h  adpcm_decode.c  adpcm_internal.h
src/xr-audio/ffv_hal_interface/: BinderStatus.h  Capabilities.h  FFVmsgQueue.h  FFVplatformDependent.h  FailureCode.h  FarFieldVoice.h  FarFieldVoiceController.h  FarFieldVoiceControllerListener.h  FarFieldVoiceEventListener.h  FarFieldVoiceWrapper.h  HalFileDescriptor.h  HalState.h  KeywordDetectData.h  KeywordDetectInfo.h  PowerMode.h  Status.h
src/xr-audio/opus/: xraudio_opus.c  xraudio_opus.h
src/xr-audio/test/: CMakeLists.txt  xraudio_vad_test.c
src/xr-fdc/: xr_fdc.c
src/xr-ffv-hal/: xr_ffv_hal.c  xr_ffv_hal_interface.c  xr_ffv_hal_interface.h  xr_ffv_hal_plugin.h
src/xr-logger/: CMakeLists.txt  rdkx_logger.c  rdkx_logger.h  rdkx_logger_level_mw.hash  rdkx_logger_level_vd.hash  rdkx_logger_mw.h  rdkx_logger_private.h  rdkx_logger_vd.h
src/xr-logger/rdkv/: rdkx_logger_global.json  rdkx_logger_modules.json
src/xr-mfv/: MFVservice.h
src/xr-mq/: xr_mq.c  xr_mq.h
src/xr-sm-engine/: xr_sm_engine.c  xr_sm_engine.h
src/xr-speech-router/: xrsr.c  xrsr.h  xrsr_config_default.json  xrsr_private.h  xrsr_protocol_http.c  xrsr_protocol_http.h  xrsr_protocol_http_log_filter.h  xrsr_protocol_http_log_filter.hash  xrsr_protocol_http_sm.h  xrsr_protocol_sdt.c  xrsr_protocol_sdt.h  xrsr_protocol_sdt_sm.h  xrsr_protocol_ws.c  xrsr_protocol_ws.h  xrsr_protocol_ws_sm.h  xrsr_utils.c  xrsr_utils.h  xrsr_xraudio.c
src/xr-speech-vrex/: xrsv.h
src/xr-speech-vrex/xrsv_http/: xrsv_http.c  xrsv_http.h
src/xr-speech-vrex/xrsv_ws_nextgen/: xrsv_ws_nextgen.c  xrsv_ws_nextgen.h  xrsv_ws_nextgen_key_code.hash  xrsv_ws_nextgen_msgtype.hash  xrsv_ws_nextgen_private.h
src/xr-timer/: xr_timer.c  xr_timer.h
src/xr-timestamp/: xr_timestamp.c  xr_timestamp.h
